--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,12 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen bis 01.02.2018</h3>
+				<ul style="font-size:18px">
+				<li>Detaillierte Client-Statistiken (Ethernet, 2.4 GHz, 5 GHz) für Router mit aktualisierter Firmware</li>
+				<li>Airtime-Statistiken für Router mit aktualisierter Firmware</li>
+				<li>Netzwerk-Interface-Statistiken werden jetzt in Bit pro Sekunde angezeigt</li>
+				</ul>
 				<h3>&Auml;nderungen bis 18.01.2018</h3>
 				<ul style="font-size:18px">
 				<li>Netif-Statistiken werden nur noch 21 Tage erfasst, um die Ladezeit der Routerseite zu reduzieren</li>
