--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -165,6 +165,11 @@
 						<span style="color:#d90000"> &nbsp; - &nbsp; Router BLOCKED by KeyXchange!</span>
 						{%- endif -%}
 						</td></tr>
+						{%- if router.tc_enabled != None %}
+						<tr><th>Traffic control</th><td><span class="{{ "glyphicon glyphicon-ok" if router.tc_enabled else "glyphicon glyphicon-remove" }}"></span>
+						{%- if router.tc_enabled %} &nbsp; (up: {{ router.tc_out }} kBit/s, down: {{ router.tc_in }} kBit/s){%- endif -%}
+						</td></tr>
+						{%- endif -%}
 						<tr><th>Clients</th><td><span class="clientinfo">{{ router.clients }}</span>
 						{%- if router.clients_eth or router.clients_w2 or router.clients_w5 %}
 						 &nbsp; (Ethernet: <span class="clientinfo">{{ router.clients_eth }}</span>{%- if router.clients_w2 != None %}, 2.4 GHz: <span class="clientinfo">{{ router.clients_w2 }}</span>{%- endif -%}{%- if router.clients_w5 != None %}, 5 GHz: <span class="clientinfo">{{ router.clients_w5 }}</span>{%- endif -%})
