router.html/map: Treat quality differently based on routing protocol
Adds display support for BATMAN_V data.

This is step 1 of 2. It does change the background colors for
neighbors, but does NOT change the link colors in the map.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -233,7 +233,7 @@
 								<th>Interface</th>
 							</tr>
 							{%- for neighbour in router.neighbours %}
-							<tr style="background-color: {{ neighbour.quality|neighbour_color }};">
+							<tr style="background-color: {{ neighbour.color }};">
 								
 								<td>{%- if neighbour.hostname -%}<a href="{{ url_for('router_info', dbid=neighbour.id) }}">{{ neighbour.hostname }}</a>{%- else -%}---{%- endif -%}</td>
 								<td>{{ neighbour.mac }}</td>
