--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,17 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen bis 22.02.2018</h3>
+				<ul style="font-size:18px">
+				<li>V2-Hoods werden auf der Statistik-Seite farblich hervorgehoben</li>
+				<li>Das Setzen des "Blocked"-Status wird als Router-Event geloggt</li>
+				<li>Babel-Verbindungskosten werden im Nachbarplot erfasst (erfordert Anpassung der Firmware)</li>
+				<li>Die Routerübersicht zeigt nun auch "last contact" an; nach der "uptime" kann sortiert werden</li>
+				<li>Netzinterfaces verfügen nun über eine Erklärung sowie Farbhervorhebung entsprechend der Funktion</li>
+				<li>Traffic-Control-Status für Router mit aktualisierter Firmware</li>
+				<li>Für alle Router ohne Kontaktadresse wird eine Warnung angezeigt</li>
+				<li>Das Restart-Event für V2-Hoods wird nun wieder korrekt geloggt</li>
+				</ul>
 				<h3>&Auml;nderungen bis 01.02.2018</h3>
 				<ul style="font-size:18px">
 				<li>Detaillierte Client-Statistiken (Ethernet, 2.4 GHz, 5 GHz) für Router mit aktualisierter Firmware</li>
