--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -419,7 +419,7 @@
 	<script type="text/javascript">
 		var router_stats = {{ router.stats|statbson2json|safe }};
 		var netif_stats = null;
-		var neigh_stats = {{ neighstats|statbson2json|safe }};
+		var neigh_stats = {{ neighstats|safe }};
 		var gw_stats = {{ gwstats|statbson2json|safe }};
 		var neighbours = [
 		{%- for neighbour in router.neighbours %}
