--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,16 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog</h2>
+				<h3>&Auml;nderungen bis 16.04.2018</h3>
+				<ul style="font-size:18px">
+				<li>Server-Migration (vielen Dank an den Spender)</li>
+				<li>Mehrere Backend-Änderungen sollten dafür sorgen, dass die Routerdaten nun verlässlicher alle 5 Minuten aktualisiert werden</li>
+				<li>Drastische Erhöhung der angezeigten Router-Events: Es werden nun die letzten 250 Events angezeigt</li>
+				<li>Die Nachbar-Statistik wird nun nur für den letzten Tag geladen; die volle Statistik kann über eine Schaltfläche nachgeladen werden. Zusammen mit anderen Änderungen reduziert dies die Ladezeit der Routerdetailseite enorm</li>
+				<li>Die Nachbar-Statistik zeigt nun auch Daten für Knoten an, die gerade nicht verbunden sind, aber es in der Vergangenheit waren</li>
+				<li>Das Positions-Popup in der Karte muss nun als Layer aktiviert werden (Standard: aus)</li>
+				<li>Die Statisitik-Seite schlüsselt nun die Modelle pro Client auf</li>
+				</ul>
 				<h3>&Auml;nderungen bis 22.02.2018</h3>
 				<ul style="font-size:18px">
 				<li>V2-Hoods werden auf der Statistik-Seite farblich hervorgehoben</li>
