statistics.html: Show aggregated traffic for hoods and total
This patch aims at showing the client-caused traffic. We use
bat0 for this, at this seems to be the easiest way which does not
require router-specific ifs etc.

This patch distinguishes between routers and gateways:

- For routers, we just use the bat0 data
- For gateways, we aggregate eth0.1, eth1.1, w2ap and w5ap

This requires changes to the MySQL database!

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -468,8 +468,7 @@
 		function load_netif_stats(netif) {
 			var starttimenetif = performance.now();
 			ajax_get_request(url_load_netif_stats + "?netif=" + netif, function(netifstats) {
-				netif_stats = netifstats;
-				network_graph(netif);
+				network_graph(netifstats,"tx","rx");
 				console.debug("Loaded netif stats for "+netif+" in "+((performance.now() - starttimenetif)/1000).toFixed(3)+" seconds.");
 				});
 		}
