--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -239,7 +239,7 @@
 							{%- for neighbour in router.neighbours %}
 							<tr style="background-color: {{ neighbour.color }};">
 								
-								<td>{%- if neighbour.hostname -%}<a href="{{ url_for('router_info', dbid=neighbour.id) }}">{{ neighbour.hostname }}</a>{%- else -%}---{%- endif -%}</td>
+								<td>{%- if neighbour.hostname -%}<a href="{{ url_for('router_info', dbid=neighbour.id) }}" style="color:#000000">{{ neighbour.hostname }}</a>{%- else -%}---{%- endif -%}</td>
 								<td>{{ neighbour.mac }}</td>
 								<td>{{ neighbour.quality }}</td>
 								<td>{{ neighbour.netif }}</td>
