--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -18,10 +18,17 @@
 			</div>
 			<div class="col-xs-8 col-sm-8">
 				<p style="margin-top:12px">Monitoring f&uuml;r das Freifunk Franken Funknetzwerk.<br />
-				Hier werden Daten von Routern ab Firmware 0.5.2 angezeigt.<br />
+				Hier werden Daten von Routern ab Firmware 0.5.x angezeigt.<br />
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
-				<h2 style="margin-top:30px">Changelog</h2>
+				<h2 style="margin-top:30px">Changelog (nur Features)</h2>
+				<h3>&Auml;nderungen bis 03.07.2018</h3>
+				<ul style="font-size:18px">
+				<li>Globaler und Hood-spezifischer aggregierter Traffic</li>
+				<li>Gateways werden als solche auf der Detailseite erkannt</li>
+				<li>Ethernet-Nachbarn werden auf der Karte farblich erkennbar (dunkelgrüne Linien)</li>
+				<li>"Beste" Verbindung wird für Links auf Karte verwendet</li>
+				</ul>
 				<h3>&Auml;nderungen bis 16.04.2018</h3>
 				<ul style="font-size:18px">
 				<li>Server-Migration (vielen Dank an den Spender)</li>
