router.html: Rephrase option to report router
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -70,7 +70,7 @@
 						<li><a href="#" onclick="$('#act').val('ban'); $('#actform').submit()">Ban Router</a></li>
 						<li><a href="#" onclick="$('#blockedform').submit()">{{ "Remove blocked status" if router.blocked else "Mark as blocked" }}</a></li>
 						{%- endif %}
-						<li><a href="#" onclick="$('#act').val('report'); $('#actform').submit()">Report abusive Router</a></li>
+						<li><a href="#" onclick="$('#act').val('report'); $('#actform').submit()">Report abusive/illegal content</a></li>
 					</ul>
 				</div>
 			</form>
