--- a/ffmap/web/templates/v2routers.html
+++ b/ffmap/web/templates/v2routers.html
@@ -55,13 +55,13 @@
 	<div class="row">
 		<div class="col-xs-12 col-md-6">
                         <div class="panel panel-default">
-                                <div class="panel-heading">Routers V1</div>
+                                <div class="panel-heading">Routers V1: {{ statsv1[-1]["online"] }} on, {{ statsv1[-1]["offline"] }} off, {{ statsv1[-1]["unknown"] }} unknown, {{ statsv1[-1]["orphaned"] }} orphaned; {{ statsv1[-1]["online"]+statsv1[-1]["offline"]+statsv1[-1]["unknown"]+statsv1[-1]["orphaned"] }} total</div>
                                 <div class="panel-body">
                                         <div id="globrouterstat1" class="graph"></div>
                                 </div>
                         </div>
                         <div class="panel panel-default">
-                                <div class="panel-heading">Clients V1</div>
+                                <div class="panel-heading">Clients V1: {{ statsv1[-1]["clients"] }}</div>
                                 <div class="panel-body">
                                         <div id="globclientstat1" class="graph"></div>
                                 </div>
@@ -75,13 +75,13 @@
 		</div>
 		<div class="col-xs-12 col-md-6">
 			<div class="panel panel-default">
-				<div class="panel-heading">Routers V2</div>
+				<div class="panel-heading">Routers V2: {{ statsv2[-1]["online"] }} on, {{ statsv2[-1]["offline"] }} off, {{ statsv1[-2]["unknown"] }} unknown, {{ statsv2[-1]["orphaned"] }} orphaned; {{ statsv2[-1]["online"]+statsv2[-1]["offline"]+statsv2[-1]["unknown"]+statsv2[-1]["orphaned"] }} total</div>
 				<div class="panel-body">
 					<div id="globrouterstat" class="graph"></div>
 				</div>
 			</div>
 			<div class="panel panel-default">
-				<div class="panel-heading">Clients V2</div>
+				<div class="panel-heading">Clients V2: {{ statsv2[-1]["clients"] }}</div>
 				<div class="panel-body">
 					<div id="globclientstat" class="graph"></div>
 				</div>
