--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -39,6 +39,7 @@
 					                      (["router_list", "router_info"], "Routers"),
 					                      (["user_list", "user_info"], "Users"),
 					                      (["global_statistics"], "Statistics"),
+					                      (["gateways"], "GWs"),
 					                      (["apidoc"], "API"),
 					] %}
 					<li class="{{ "active" if request.endpoint in fkt }}"><a href="{{ url_for(fkt[0]) }}">{{ text }}</a></li>
