--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -51,7 +51,7 @@
 		<div class="col-xs-12 col-sm-10">
 		<h2 style="margin-top: 10px;">{%- if router.gateway %}Gateway{%- else %}Router{%- endif %}: {{ router.hostname }}</h2>
 		{%- if mac %}
-		<h4 style="margin-top: 10px;margin-bottom: 20px">Perma-Link: <a href="{{ url_for('router_mac', mac=mac, _external=True) }}">{{ url_for('router_mac', mac=mac, _external=True) }}</a></h4>
+		<h4 style="margin-top: 10px;margin-bottom: 20px">Perma-Link: <a href="{{ url_for('router_mac', mac=mac|int2shortmac, _external=True) }}">{{ url_for('router_mac', mac=mac|int2shortmac, _external=True) }}</a></h4>
 		{%- endif %}
 		</div>
 		<div class="col-xs-12 col-sm-2 text-right" style="margin-top: 10px; margin-bottom: 10px;">
@@ -240,7 +240,7 @@
 							<tr style="background-color: {{ neighbour.color }};">
 								
 								<td>{%- if neighbour.hostname -%}<a href="{{ url_for('router_info', dbid=neighbour.id) }}" style="color:#000000">{{ neighbour.hostname }}</a>{%- else -%}---{%- endif -%}</td>
-								<td>{{ neighbour.mac }}</td>
+								<td>{{ neighbour.mac|int2mac }}</td>
 								<td>{{ neighbour.quality }}</td>
 								<td>{{ neighbour.netif }}</td>
 							</tr>
@@ -272,14 +272,14 @@
 					<li class="list-group-item active" data-name="{{ netif.netif|replace('.', '')|replace('$', '') }}">
 						<div class="row">
 							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading">br-mesh: <span class="netifdesc">Bridge</span></h4></div>
-							<div class="col-xs-5 col-sm-5 text-right" style="text-transform: uppercase;"><h4 class="list-group-item-heading">{{ netif.mac }}</h4></div>
+							<div class="col-xs-5 col-sm-5 text-right" style="text-transform: uppercase;"><h4 class="list-group-item-heading">{{ netif.mac|int2mac }}</h4></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-5 col-sm-5">
 								{%- if netif.ipv6_fe80_addr -%}
 								{{ netif.ipv6_fe80_addr }}
 								{%- else -%}
-								<em title="Calculated from MAC Address">{{ netif.mac|mac2fe80 }}</em>
+								<em title="Calculated from MAC Address">{{ netif.mac|macint2fe80 }}</em>
 								{%- endif -%}
 								{%- if netif.ipv4_addr -%}
 								<br />{{ netif.ipv4_addr }}
@@ -301,7 +301,7 @@
 					<li class="list-group-item" data-name="{{ netif.netif|replace('.', '')|replace('$', '') }}">
 						<div class="row">
 							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading" style="{%- if netif.color -%}color:{{ netif.color }}{%- endif -%}">{{ netif.netif }}{%- if netif.description -%}: <span class="netifdesc">{{ netif.description }}</span>{%- endif %}</h4></div>
-							<div class="col-xs-5 col-sm-5 text-right" style="text-transform: uppercase;"><h4 class="list-group-item-heading">{{ netif.mac }}</h4></div>
+							<div class="col-xs-5 col-sm-5 text-right" style="text-transform: uppercase;"><h4 class="list-group-item-heading">{{ netif.mac|int2mac }}</h4></div>
 						</div>
 						<div class="row">
 							<div class="col-xs-12 col-sm-12" style="padding-bottom:6px;font-size:14px">
@@ -324,7 +324,7 @@
 								{%- if netif.ipv6_fe80_addr -%}
 								{{ netif.ipv6_fe80_addr }}
 								{%- else -%}
-								<em title="Calculated from MAC Address">{{ netif.mac|mac2fe80 }}</em>
+								<em title="Calculated from MAC Address">{{ netif.mac|macint2fe80 }}</em>
 								{%- endif -%}
 								{%- if netif.ipv4_addr -%}
 								<br />{{ netif.ipv4_addr }}
@@ -363,7 +363,7 @@
 							{%- else %}
 							<tr>
 							{%- endif %}
-								<td><a href="{{ url_for('router_list', q='selected:^%s$' % gw.mac) }}">{{ gw.label }}</a></td>
+								<td><a href="{{ url_for('router_list', q='selected:^%s$' % gw.mac|int2shortmac) }}">{{ gw.label }}</a></td>
 								<td>{{ gw.batX }}</td>
 								<td>{{ gw.quality }}</td>
 								<td>{{ gw.netif }}</td>
@@ -424,7 +424,7 @@
 		var gw_stats = {{ gwstats|statbson2json|safe }};
 		var neighbours = [
 		{%- for neighbour in router.neighbours %}
-			{"name": "{{ neighbour.hostname or neighbour.mac }}", "mac": "{{ neighbour.mac }}", "netif": "{{ neighbour.netif }}"},
+			{"name": "{{ neighbour.hostname or neighbour.mac|int2mac }}", "mac": "{{ neighbour.mac }}", "netif": "{{ neighbour.netif }}"},
 		{%- endfor %}
 		];
 		var gws = [
