--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -163,11 +163,11 @@
 					<tbody>
 						{%- for mac, value in gws.items() %}
 						<tr>
-							<td class="firstrow" data-order="{{ value["sort"] }}"><p style="margin:0"><a href="{{ url_for('router_list', q='selected:^%s$' % mac) }}">{{ gws_info[mac]["label"] }}</a></p>
+							<td class="firstrow" data-order="{{ value["sort"] }}"><p style="margin:0"><a href="{{ url_for('router_list', q='selected:^%s$' % mac|int2shortmac) }}">{{ gws_info[mac]["label"] }}</a></p>
 							{%- if gws_info[mac]["gw"] %}
-							<p style="margin:0;font-size:12px">{{ mac }}
+							<p style="margin:0;font-size:12px">{{ mac|int2mac }}
 							{%- if gws_info[mac]["batmac"] %}
-							 / {{ gws_info[mac]["batmac"] }}
+							 / {{ gws_info[mac]["batmac"]|int2mac }}
 							{%- endif %}
 							</p>
 							{%- endif %}
@@ -176,7 +176,7 @@
 							<td class="danger" data-order="{{ (value["selected"]["offline"] or 0) + (value["others"]["offline"] or 0) }}"><span style="font-weight:bold">{{ value["selected"]["offline"] or 0 }}</span> / {{ value["others"]["offline"] or 0 }}</td>
 							<td class="warning" data-order="{{ (value["selected"]["unknown"] or 0) + (value["others"]["unknown"] or 0) }}"><span style="font-weight:bold">{{ value["selected"]["unknown"] or 0 }}</span> / {{ value["others"]["unknown"] or 0 }}</td>
 							<td class="active" data-order="{{ (value["selected"]|sumdict if value["selected"] else 0) + (value["others"]|sumdict if value["others"] else 0) }}"><span style="font-weight:bold">{{ gws_sum[mac]["routers"] if gws_sum[mac] else 0 }}</span> / {{ value["others"]|sumdict if value["others"] else 0 }}</td>
-							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % mac) }}">Stats</a></td>
+							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % mac|int2shortmac) }}">Stats</a></td>
 						</tr>
 						{%- endfor %}
 					</tbody>
@@ -190,21 +190,21 @@
 				<div class="panel-heading">Gateway-Details</div>
 				<div class="panel-body">
 					<table class="table table-condensed">
-						<tr><th>Gateway</th><td>{{ gws_info[selectgw]["gw"] }}</td></tr>
-						<tr><th>Interface</th><td>{{ gws_info[selectgw]["gwif"] }}</td></tr>
+						<tr><th>Gateway</th><td>{{ gws_info[selectgwint]["gw"] }}</td></tr>
+						<tr><th>Interface</th><td>{{ gws_info[selectgwint]["gwif"] }}</td></tr>
 						<tr><th>MAC address</th><td>{{ selectgw }}</td></tr>
-						<tr><th>BatX interface</th><td>{{ gws_info[selectgw]["batX"] }}</td></tr>
-						{%- if gws_info[selectgw]["ipv4"] %}
-						<tr><th>Internal IPv4</th><td>{{ gws_info[selectgw]["ipv4"] }}</td></tr>
+						<tr><th>BatX interface</th><td>{{ gws_info[selectgwint]["batX"] }}</td></tr>
+						{%- if gws_info[selectgwint]["ipv4"] %}
+						<tr><th>Internal IPv4</th><td>{{ gws_info[selectgwint]["ipv4"] }}</td></tr>
 						{%- endif %}
-						{%- if gws_info[selectgw]["ipv6"] %}
-						<tr><th>Internal IPv6</th><td>{{ gws_info[selectgw]["ipv6"] }}</td></tr>
+						{%- if gws_info[selectgwint]["ipv6"] %}
+						<tr><th>Internal IPv6</th><td>{{ gws_info[selectgwint]["ipv6"] }}</td></tr>
 						{%- endif %}
-						{%- if gws_info[selectgw]["dhcpstart"] %}
-						<tr><th>DHCP range</th><td>{{ gws_info[selectgw]["dhcpstart"] }} - {{ gws_info[selectgw]["dhcpend"] }}</td></tr>
+						{%- if gws_info[selectgwint]["dhcpstart"] %}
+						<tr><th>DHCP range</th><td>{{ gws_info[selectgwint]["dhcpstart"] }} - {{ gws_info[selectgwint]["dhcpend"] }}</td></tr>
 						{%- endif %}
-						{%- if gws_info[selectgw]["stats_page"] %}
-						<tr><th>Stats page</th><td>{{ gws_info[selectgw]["stats_page"] }}</td></tr>
+						{%- if gws_info[selectgwint]["stats_page"] %}
+						<tr><th>Stats page</th><td>{{ gws_info[selectgwint]["stats_page"] }}</td></tr>
 						{%- endif %}
 						{%- for a in gws_admin %}
 						<tr><th>Admin</th><td>{{ a }}</td></tr>
