--- a/ffmap/web/templates/gws.html
+++ b/ffmap/web/templates/gws.html
@@ -125,7 +125,7 @@
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
 							<td class="success">{{ ip["ipv4"] }}</td>
-							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]) }}">Stats</a></td>
+							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]|int2shortmac) }}">Stats</a></td>
 						</tr>
 						{%- endfor %}
 					</tbody>
@@ -152,7 +152,7 @@
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
 							<td class="success">{{ ip["ipv6"] }}</td>
-							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]) }}">Stats</a></td>
+							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]|int2shortmac) }}">Stats</a></td>
 						</tr>
 						{%- endfor %}
 					</tbody>
