Global: Convert IPv4/IPv6 from char to numbers/binary
This is done for tables router_ipv6 and router_netif.

This is not done for table gw_netif (contains subnet masks).

This will not yet update the db setup scripts!

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -276,16 +276,16 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-5 col-sm-5">
-								{%- if netif.ipv6_fe80_addr -%}
-								{{ netif.ipv6_fe80_addr }}
+								{%- if netif.fe80_addr -%}
+								{{ netif.fe80_addr|bin2ipv6 }}
 								{%- else -%}
 								<em title="Calculated from MAC Address">{{ netif.mac|macint2fe80 }}</em>
 								{%- endif -%}
 								{%- if netif.ipv4_addr -%}
-								<br />{{ netif.ipv4_addr }}
+								<br />{{ netif.ipv4_addr|int2ipv4 }}
 								{%- endif -%}
 								{%- for ipv6_addr in netif.ipv6_addrs -%}
-								<br />{{ ipv6_addr }}
+								<br />{{ ipv6_addr|bin2ipv6 }}
 								{%- endfor -%}
 							</div>
 							{%- if netif.rx is defined %}
@@ -321,16 +321,16 @@
 						</div>
 						<div class="row">
 							<div class="col-xs-5 col-sm-5">
-								{%- if netif.ipv6_fe80_addr -%}
-								{{ netif.ipv6_fe80_addr }}
+								{%- if netif.fe80_addr -%}
+								{{ netif.fe80_addr|bin2ipv6 }}
 								{%- else -%}
 								<em title="Calculated from MAC Address">{{ netif.mac|macint2fe80 }}</em>
 								{%- endif -%}
 								{%- if netif.ipv4_addr -%}
-								<br />{{ netif.ipv4_addr }}
+								<br />{{ netif.ipv4_addr|int2ipv4 }}
 								{%- endif -%}
 								{%- for ipv6_addr in netif.ipv6_addrs -%}
-								<br />{{ ipv6_addr }}
+								<br />{{ ipv6_addr|bin2ipv6 }}
 								{%- endfor -%}
 							</div>
 							{%- if netif.rx is defined %}
