--- a/ffmap/web/templates/gws.html
+++ b/ffmap/web/templates/gws.html
@@ -96,7 +96,7 @@
 							<td class="firstrow">{{ ip["name"] }}</td>
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
-							<td class="success">{{ ip["dhcpstart"] }} - {{ ip["dhcpend"] }}</td>
+							<td class="success" data-order="{{ ip["dhcpstart"]|ip2int }}">{{ ip["dhcpstart"] }} - {{ ip["dhcpend"] }}</td>
 						</tr>
 						{%- endfor %}
 					</tbody>
@@ -124,7 +124,7 @@
 							<td class="firstrow">{{ ip["name"] }}</td>
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
-							<td class="success">{{ ip["ipv4"] }}</td>
+							<td class="success" data-order="{{ ip["ipv4"]|ipnet2int }}">{{ ip["ipv4"] }}</td>
 							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]|int2shortmac) }}">Stats</a></td>
 						</tr>
 						{%- endfor %}
@@ -151,7 +151,7 @@
 							<td class="firstrow">{{ ip["name"] }}</td>
 							<td class="warning" data-order="{{ ip["name"] }}_{{ ip["vpnif"] }}">{{ ip["vpnif"] }}</td>
 							<td data-order="{{ ip["name"] }}_{{ ip["batif"] }}">{{ ip["batif"] }}</td>
-							<td class="success">{{ ip["ipv6"] }}</td>
+							<td class="success" data-order="{{ ip["ipv6"]|ipnet2int }}">{{ ip["ipv6"] }}</td>
 							<td class="stats"><a href="{{ url_for('global_gwstatistics', selectgw='%s' % ip["mac"]|int2shortmac) }}">Stats</a></td>
 						</tr>
 						{%- endfor %}
